# PSX-MCP-Server

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  connect-gemini.sh  demo_mcp_server.py  demo_new_tools.py  demo_simple_names.py  gemini_config.json  gemini_config.template.json  mcp-config.json  mcp-docker-config.json  mcp_config.template.json  mypy.ini  psx_mcp_server.py  pyproject.toml  requirements.txt  setup.py  simple_test.py  test_psx_mcp_server.py
assets/: README.md
assets/logos/: .gitkeep
assets/screenshots/: .gitkeep
config/: settings.py
docs/: API.md  LINTING_RESULTS.md  PROJECT_STRUCTURE.md  TEST_RESULTS.md
examples/: __init__.py  demo_mcp_server.py  demo_new_tools.py  demo_simple_names.py
scripts/: start_server.py
src/psx_mcp/: __init__.py  client.py  models.py  server.py  tools.py
tests/: __init__.py  simple_test.py  test_psx_endpoints.py  test_psx_mcp_server.py
